<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@drawable/back04"
    android:orientation="vertical"
    tools:context=".MainActivity">


        <ImageView
            android:id="@+id/img_greetingImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:src="@drawable/home_logo"
            android:contentDescription="@string/greeting_image_desc" />

        <TextView
            android:id="@+id/txt_greetingTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/greeting_text"
            android:textColor="#132A13"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_aim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/aim_text"
            android:layout_marginTop="20dp"
            android:textColor="#000000"
            android:textSize="19.5sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_greetingTextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:layout_marginTop="0dp"
            android:text="@string/greeting_description"
            android:textColor="#000000"
            android:textSize="19.5sp"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/bt_startButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="#025853"
            android:padding="15dp"
            android:text="@string/start_button"
            android:contentDescription="@string/start_button_desc"
            android:textSize="16sp" />


</LinearLayout>
